# cpp_project_generator

./: .gitignore  CMakeLists.txt  main.cpp
libs/: .gitkeep
src/: CMakeLists.txt  ProjectType.cpp  ProjectType.h  arch.h  config.cpp  config.h  git.cpp  git.h  helpers.cpp  helpers.h  types.h  variable_matchers.h
src/linux/: arch.cpp
src/win/: arch.cpp
templates/common/: .clang-format  .gitignore  CMakeSettings.json
templates/common/tests/: CMakeLists.txt
templates/common/tests/src/: test_generic.cpp
templates/exec/: CMakeLists.txt
templates/exec/src/: .gitkeep  CMakeLists.txt  main.cpp  util.cpp  util.hpp
templates/exec/src/PROJECT_NAME/: CMakeLists.txt  util.cpp
templates/exec/tests/: CMakeLists.txt
templates/exec/tests/src/: INCLUDE_HELLO.cpp  tests_generic.cpp
templates/lib/: CMakeLists.txt
templates/lib-common/: CMakeLists.txt
templates/lib-common/include/PROJECT_NAME/: PROJECT_NAME.hpp
templates/lib-common/tests/: CMakeLists.txt
templates/lib-common/tests/src/: INCLUDE_HELLO.cpp  tests_generic.cpp
templates/lib-compiled/: CMAKE_LIBRARY_DEF.cmake
templates/lib-compiled/src/: PROJECT_NAME.cpp
templates/lib-header/: CMAKE_LIBRARY_DEF.cmake  CMakeLists.txt
templates/lib/src/: PROJECT_NAME.cpp
tests/: CMakeLists.txt  main.cpp
tests/src/: test_ProjectType.cpp  test_config.cpp  test_helpers.cpp  test_regex.cpp  tests_generic.cpp
